[package]
name = "pikpak-fuse"
version = "0.1.13"
edition = "2021"
description = "FUSE for pikpak"
license = "MIT"
homepage = "https://github.com/ykxVK8yL5L/pikpak-fuse"
repository = "https://github.com/ykxVK8yL5L/pikpak-fuse.git"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytes = "1.0"
clap = { version = "3.0", features = ["derive", "env", "wrap_help"] }
fuser = { version = "0.11", default-features = false }
libc = "0.2"
oneshot = { version = "0.1", default-features = false, features = ["std"] }
openssl-probe = { version = "0.1", optional = true }
parking_lot = "0.12"
reqwest = { version = "0.11", default-features = false, features = ["json", "gzip", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = ["formatting", "parsing"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
url = "2.2"

[features]
default = ["rustls-tls", "libfuse"]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
native-tls-vendored = ["reqwest/native-tls-vendored", "openssl-probe"]
libfuse = ["fuser/libfuse"]

[profile.release]
lto = true
opt-level = "z"  # Optimize for size

[package.metadata.deb]
maintainer = "ykxVK8yL5L <ykxVK8yL5L@icloud.com>"
copyright = "2021-present, ykxVK8yL5L <ykxVK8yL5L@icloud.com>"
license-file = ["LICENSE", "4"]
extended-description = """\
pikpak网盘 FUSE 磁盘挂载"""
depends = "fuse3"
section = "utility"
priority = "optional"
assets = [
    ["target/release/pikpak-fuse", "usr/bin/", "755"],
    ["systemd.service", "etc/systemd/system/pikpak-fuse.service", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/pikpak-fuse", dest = "/usr/bin/pikpak-fuse", mode = "0755" },
    { source = "LICENSE", dest = "/usr/share/doc/pikpak-fuse/LICENSE", doc = true, mode = "0644" },
    { source = "systemd.service", dest = "/etc/systemd/system/pikpak-fuse.service", config = true, mode = "0644" },
]

[package.metadata.generate-rpm.requires]
fuse3 = "*"
